added initial POC WIDE Server integration

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 .main {
     .stage {
         margin-top: 25px;
+
+        border-bottom: 1px dashed grey;
+
+        padding-bottom: 25px;
     }
 
     .buttons {
