--- a/src/app/pages/dev/kitchen-sink/kitchen-sink.component.scss
+++ b/src/app/pages/dev/kitchen-sink/kitchen-sink.component.scss
@@ -1,5 +1,10 @@
 @import '_imports';
 
+.kitchen-sink {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .swatches {
     display: flex;
 
@@ -68,4 +73,19 @@
     display: flex;
     gap: 20px;
     align-items: center;
+}
+
+.button-region {
+    margin-left: -20px;
+    margin-right: -20px;
+    
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    &.gradient {
+        color: $light-beige;
+        background: $gradient-4;
+    }
 }
