added landing page for main deployment

--- a/src/app/pages/client/landing-page/landing-page.component.html
+++ b/src/app/pages/client/landing-page/landing-page.component.html
@@ -1,2 +1,3 @@
-<p>Hello WIDE. Greatness awaits!</p>
-<p>(provided Matt does his job)</p>
+<h1>WIDE Client</h1>
+<p>Work in progress...</p>
+<p>Visit <a href="https://www.wid3.xyz">wid3.xyz</a> for more information about WIDE</p>
