--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,6 +8,7 @@ $off-white: #F2F2F2;
 /* SECONDARY */
 $grey-dark: #727272;
 $grey-light: #CBCBCB;
+$brown-light: #A1928A;
 
 /* GRADIENT COMPONENT */
 $coral: #FF7872;
