--- a/src/styles.scss
+++ b/src/styles.scss
@@ -220,3 +220,105 @@ $btn-white-border-width: 2px;
         background-clip: text;
     }
 }
+
+
+/* FORMS */
+
+input.text-input {
+    height: 42px;
+    line-height: 20px;
+    background: $light-beige;
+    border: 1px solid $light-beige;
+    border-radius: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    font-size: 15px;
+    font-weight: 400;
+
+    color: $brown;
+
+    &.error,
+    &.invalid {
+        border: 1px solid $coral;
+        color: $coral;
+    }
+
+    &::placeholder {
+        color: $brown-light;
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: 0px 3px 8px rgba(62, 27, 7, 0.1);
+        color: $brown;
+        font-weight: 500;
+        font-size: 16px;
+    }
+
+    +.error-message {
+        margin-top: 5px;
+        display: block;
+        color: $coral;
+
+        //TODO: Fix once we identify an icon set
+        &:before {
+            content: "❌ ";
+        }
+    }
+}
+
+input[type=radio] {
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border: 1px solid $brown-light;
+    border-radius: 18px;
+    outline: none;
+    transition: border-color 0.3s ease;
+    background: $light-beige;
+
+    &:checked {
+        border: 5px solid $coral;
+    }
+
+
+    &.radio-alt {
+        &:checked {
+            border: none;
+            background: $gradient-3;
+            &:after {
+                content: '';
+                display: block;
+                margin: 6px 4px;
+                width: 18px;
+                height: 18px;
+                background: $white;
+                clip-path: $wide-tick;
+            }
+        }
+    }
+}
+
+input:disabled {
+    color: $grey-light;
+    border-color: $grey-light;
+}
+
+.radio-group {
+    label {
+        font-size: 16px;
+        font-weight: 400;
+        color: $brown;
+        height: 18px;
+        position: relative;
+        top: -4px;
+    }
+
+    &.vertical {
+        label:after {
+            content: '';
+            display: block;
+        }
+    }
+}
