--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -19,3 +19,7 @@ $pink: #F57F9F;
 /* GRADIENT */
 $gradient-3: linear-gradient(60deg, $yellow, 25%, $coral, 75%, $pink);
 $gradient-4: linear-gradient(60deg, $coral, 5%, $yellow, 40%, $peach, 80%, $pink);
+
+/* ACTIONS */
+$success: #77D058;
+$error: $coral;
