--- a/src/styles.scss
+++ b/src/styles.scss
@@ -287,6 +287,7 @@ input[type=radio] {
         &:checked {
             border: none;
             background: $gradient-3;
+
             &:after {
                 content: '';
                 display: block;
@@ -295,6 +296,53 @@ input[type=radio] {
                 height: 18px;
                 background: $white;
                 clip-path: $wide-tick;
+            }
+        }
+    }
+}
+
+input[type=checkbox] {
+    appearance: none;
+    width: 36px;
+    height: 20px;
+    background: $grey-light;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.3s;
+
+    &:after {
+        content: '';
+        display: block;
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        background-color: $white;
+        margin-top: 3px;
+        position: relative;
+        left: 4px;
+        transition: all 0.3s;
+    }
+
+    &:checked {
+        background: $coral;
+
+        &:after {
+            left: 18px;
+        }
+    }
+
+    &.checkbox-lg {
+        width: 60px;
+        height: 32px;
+
+        &:after {
+            width: 26px;
+            height: 26px;
+        }
+
+        &:checked {
+            &:after {
+                left: 30px;
             }
         }
     }
@@ -321,4 +369,45 @@ input:disabled {
             display: block;
         }
     }
+}
+
+select {
+    appearance: none;
+    outline: none;
+    min-width: 250px;
+    height: 40px;
+    background: $light-beige;
+    font-size: 16px;
+    color: $brown;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+    border: 1px solid $light-beige;
+    border-radius: 5px;
+    
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16px' height='16px' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.1018 8C5.02785 8 4.45387 9.2649 5.16108 10.0731L10.6829 16.3838C11.3801 17.1806 12.6197 17.1806 13.3169 16.3838L18.8388 10.0731C19.5459 9.2649 18.972 8 17.898 8H6.1018Z' fill='%23212121'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+
+    line-height: 1.1;
+
+
+    &:focus{
+        border: 1px solid $peach;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16px' height='16px' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.1018 8C5.02785 8 4.45387 9.2649 5.16108 10.0731L10.6829 16.3838C11.3801 17.1806 12.6197 17.1806 13.3169 16.3838L18.8388 10.0731C19.5459 9.2649 18.972 8 17.898 8H6.1018Z' fill='%23212121'/%3E%3C/svg%3E");
+    }
+}
+
+/* SHAPES */
+.wide-tick {
+    width: 20px;
+    height: 14px;
+    display: inline-block;
+    clip-path: $wide-tick-lg;
+}
+
+/* COLOURS */
+.success {
+    background-color: $success;
 }
