--- a/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.html
+++ b/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.html
@@ -1,1 +1,1 @@
-<a [routerLink]="[this.url]" (click)="click($event)"><i class="menu-icon"></i><span class="menu-text">{{this.text}}</span>
+<a [routerLink]="[this.url]" (click)="click($event)"><i class="menu-icon" [ngClass]="class"></i><span class="menu-text">{{this.text}}</span>
