--- a/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
+++ b/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
@@ -1,14 +1,13 @@
 <div class="kitchen-sink">
     <h1>Fonts</h1>
     <hr>
-    <h1>Big Headline</h1>
-    <h2>Middle Headline</h2>
-    <h3>Mini Headline</h3>
-    <h4>Body 1</h4>
-    <p class="important">Body 2</p>
-    <p class="active">Body 3</p>
-    <p class="info-text">Body 4</p>
-    <p class="body-5">Body 5</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <p class="important">important</p>
+    <p class="label">label</p>
+    <p>default paragraph</p>
     <button>Buttons</button>
 
     <h1>Colours</h1>
