added nav header

--- a/src/app/pages/client/main/main.component.html
+++ b/src/app/pages/client/main/main.component.html
@@ -1,6 +1,7 @@
 <div class="main">
-    <div class="header">
+    <app-nav-header class="header" [title]="'Home'" [breadcrumbs]="['Your credentials', 'Add Credentials']"></app-nav-header>
+    <!-- <div class="header">
         {{accounts.join(',')}}
-    </div>
+    </div> -->
     <p>main works!</p>
 </div>
