--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,7 +154,7 @@ a.btn.btn-xs {
 }
 
 .btn-alt {
-    background: $white;
+    background: transparent;
     color: $coral;
     border: 2px solid $coral;
 }
