--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,6 +9,7 @@ $off-white: #F2F2F2;
 $grey-dark: #727272;
 $grey-light: #CBCBCB;
 $brown-light: #A1928A;
+$salmon-light: #FF947A;
 
 /* GRADIENT COMPONENT */
 $coral: #FF7872;
