added credential home page, mocked wallet behaviour (partially) to help with user flows

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,6 +1,7 @@
 <div class="main">
     <app-nav-menu></app-nav-menu>
     <div class="content">
+        <app-nav-header class="header" [title]="'Home'" [breadcrumbs]="breadcrumbs"></app-nav-header>
         <router-outlet></router-outlet>
     </div>
 </div>
