--- a/src/app/pages/client/getting-started/getting-started.component.html
+++ b/src/app/pages/client/getting-started/getting-started.component.html
@@ -15,6 +15,7 @@
             <img src="assets/svg/bridge_illustration.svg" alt="WIDE logo" />
         </div>
     </div>
+    <!--TODO: Replace with app-wide-modal component-->
     <div class="modal" *ngIf="showSignMessageModal">
         <div class="sign-message-prompt">
             <h3>Verify your Web3 Identity</h3>
