--- a/src/app/pages/client/main/main.component.html
+++ b/src/app/pages/client/main/main.component.html
@@ -51,6 +51,6 @@
         </table>
     </div>
     <div class="buttons">
-        <button>Add Credentials</button>
+        <button (click)="goTo('credentials/add')">Add Credentials</button>
     </div>
 </div>
