--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -23,7 +23,7 @@
                     height: 48px;
                     border-radius: 5px;
                     display: block;
-                    background-color: $salmon-light;
+                    background-color: $peach;
                     line-height: 48px;
                     color: $white;
                     text-align: center;
@@ -39,7 +39,7 @@
                 .wallet-address {
                     font-size: 16px;
                     font-weight: 700;
-                    color: $salmon-light;
+                    color: $peach;
                 }
             }
         }
