--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <app-nav-menu></app-nav-menu>
     <div class="content">
-        <app-nav-header class="header" [title]="'Home'" [breadcrumbs]="breadcrumbs"></app-nav-header>
+        <app-nav-header class="header" [title]="title" [breadcrumbs]="breadcrumbs"></app-nav-header>
         <router-outlet></router-outlet>
     </div>
 </div>
