--- a/src/app/pages/dev/kitchen-sink/kitchen-sink.component.scss
+++ b/src/app/pages/dev/kitchen-sink/kitchen-sink.component.scss
@@ -4,6 +4,16 @@
     margin-bottom: 120px;
 }
 
+.toasts {
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    .buttons {
+        display: flex;
+        gap: 10px;
+    }
+}
+
 .form-input-region {
     background-color: $white;
     padding: 20px;
@@ -86,7 +96,7 @@
 }
 
 .button-region {
-    
+
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 100px;
