--- a/src/styles.scss
+++ b/src/styles.scss
@@ -435,3 +435,92 @@ select {
 .p-t-25 {
     padding-top: 25px;
 }
+
+
+.toast {
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    width: 350px;
+    z-index: 100;
+    border-radius: 10px;
+    box-shadow: 0px 3px 8px rgba(62, 27, 7, 0.1);
+    padding: 10px 10px 10px 10px;
+
+    display: flex;
+    align-items: center;
+
+    transition: all 1s ease;
+
+    .icon {
+        i.mdi {
+            width: fit-content;height: fit-content;
+            font-size: 42px;
+            padding: 5px;
+            margin-right: 10px;
+        }
+    }
+
+    .close-icon {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+
+        i.mdi {
+            font-size: 24px; // Adjust the size as needed
+            color: #333; // Adjust the color as needed
+        }
+    }
+
+    h4 {
+        margin-top: 8px;
+        margin-bottom: 0;
+    }
+
+    p {
+        margin-top: 2px;
+        font-size: 13px;
+        font-weight: 400;
+    }
+    
+    &.info {
+        background: $light-blue;
+
+        .icon {
+            i.mdi {
+                color: $info;
+            }
+        }
+    }
+
+    &.success {
+        background: $light-green;
+
+        .icon {
+            i.mdi {
+                color: $green;
+            }
+        }
+    }
+
+    &.warning {
+        background: $light-yellow;
+
+        .icon {
+            i.mdi {
+                color: $yellow;
+            }
+        }
+    }
+
+    &.error {
+        background: $light-coral;
+
+        .icon {
+            i.mdi {
+                color: $coral;
+            }
+        }
+    }
+}
